syntax = "proto3";

package product;

option go_package = "online-shop/proto/product";

import "google/protobuf/timestamp.proto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse);
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse);
  rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
  rpc GetProductsByCategory(GetProductsByCategoryRequest) returns (GetProductsByCategoryResponse);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category_id = 6;
  Category category = 7;
  string merchant_id = 8;
  repeated string images = 9;
  string status = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
  string parent_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
  string category_id = 5;
  string merchant_id = 6;
  repeated string images = 7;
}

message CreateProductResponse {
  Product product = 1;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  repeated string images = 6;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  string product_id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message SearchProductsRequest {
  string query = 1;
  string category_id = 2;
  double min_price = 3;
  double max_price = 4;
  string merchant_id = 5;
  int32 limit = 6;
  int32 offset = 7;
}

message SearchProductsResponse {
  repeated Product products = 1;
  int64 total = 2;
}

message ListCategoriesRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListCategoriesResponse {
  repeated Category categories = 1;
}

message GetProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
  string sort_by = 3; // name, price, created_at
  string sort_order = 4; // asc, desc
}

message GetProductsResponse {
  repeated Product products = 1;
  int64 total = 2;
}

message UpdateStockRequest {
  string product_id = 1;
  int32 stock = 2;
}

message UpdateStockResponse {
  bool success = 1;
  string message = 2;
  Product product = 3;
}

message GetProductsByCategoryRequest {
  string category_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetProductsByCategoryResponse {
  repeated Product products = 1;
  int64 total = 2;
}